--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,15 +5,10 @@
     "baseUrl": "./",
     "moduleResolution": "node",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
-  }
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]},
+  "exclude": ["node_modules", "dist"],
+  "include": ["src/**/*", "*.js"]
+  
 }
